--- a/docs/_includes/introduction.html
+++ b/docs/_includes/introduction.html
@@ -1,7 +1,7 @@
 <div class="introduction">
   <div class="column">
     <p>
-      Open color is a color sheme for UI design. You can use it for font, background, border etc. It contains a gray and 12 colors - 
+      Open color is a color scheme for UI design. You can use it for font, background, border etc. It contains a gray and 12 colors - 
       <span class="introduction-colors">
       {% for color in site.colors %}
         <span class="introduction-color introduction-{{ color }}"></span>
