--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,7 +22,7 @@
     <div class="container">
       <div class="navigation">
         <div class="title">
-          <a class="blog-logo" href="/"></a>
+          <a class="blog-logo" href="{{ site.baseurl }}"></a>
           <div class="infomation">
             <div class="version">
               Version 1.1.0
