rename npm file

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -56,7 +56,7 @@
           </ul>
           <ul class="nav-menus menus-download">
             <li class="list-title">Download</li>
-            <li><a class="nav-menu" href="https://unpkg.com/open-color@1.1.0" download>Source code</a></li>
+            <li><a class="nav-menu" href="https://unpkg.com/open-color@1.1.0/open-color.scss" download>Source code</a></li>
             <li><a class="nav-menu" href="http://adobe.ly/2cYxrjk" target="blank">Adobe library</a></li>
             <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_1.1.0.aco" download>Photoshop swatches</a></li>
             <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_1.1.0.ase" download>Illstrator swatches</a></li>
