--- a/docs/_sass/_moblie.scss
+++ b/docs/_sass/_moblie.scss
@@ -25,7 +25,8 @@
   }
 
   .index .introduction {
-    margin-top: 0;
+    margin-top: 10vh;
+    display: inline-block;
 
     p {
       font-size: 19px;
