--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -10,7 +10,11 @@
     <link rel="icon" type="image/png" href="{{ site.baseurl }}/asset/favicon/favicon-16x16.png" sizes="16x16" />
     <meta name="application-name" content="Open color"/>
     <meta name="msapplication-TileColor" content="#FFFFFF" />
-    <meta name="msapplication-TileImage" content="{{ site.baseurl }}/assets/favicon/mstile-144x144.png" />
+    <meta name="msapplication-TileImage" content="{{ site.baseurl }}/asset/favicon/mstile-144x144.png" />
+    <meta property="og:title" content="Open color" />
+    <meta property="og:url" content="https://yeun.github.io/open-color/" />
+    <meta property="og:description" content="Color scheme for UI design" />
+    <meta property="og:image" content="{{ site.baseurl }}/asset/images/thumbnail.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="//code.jquery.com/jquery-1.11.3.min.js"></script>
     <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
