--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -68,8 +68,7 @@
           </ul>
           <ul class="nav-menus menus-github">
             <li>
-              <a class="nav-menu link-github" href="https://github.com/yeun/open-color">View on Github</span>
-              </a>
+              <a class="nav-menu link-github" href="https://github.com/yeun/open-color">View on Github</a>
             </li>
           </ul>
         </div>
@@ -79,4 +78,14 @@
       {{ content }}
     </div>
   </body>
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-52837717-3', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </html>
