--- a/docs/_includes/introduction.html
+++ b/docs/_includes/introduction.html
@@ -1,15 +1,14 @@
 <div class="introduction">
   <div class="column">
     <p>
-      Open color is a color scheme for UI design. You can use it for font, background, border etc. It contains a gray and 12 colors -
-      <br>
+      Open color is a color scheme for UI design. You can use it for font, background, border etc. It contains a gray and twelve colors -
       <span class="introduction-colors">
       {% for color in site.colors %}
         <span class="introduction-color introduction-{{ color }}"></span>
       {% endfor %}.
       </span>
-      All the color is perceptible by color blind (specifically deuteranopia and protanopia) person.
+      All the colors are perceptible by color blind (specifically deuteranopia and protanopia) people.
     </p>
-    <div class="note">* Since the colors can be adjusted in future, using Open color as main identity color is not recommended.</div>
+    <div class="note">* The colors are subject to change in the future. Thus, using an Open color as a main identity color is not recommended.</div>
   </div>
 </div>
