Download link added

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -75,6 +75,7 @@
             <li><a class="nav-menu" href="http://adobe.ly/2cYxrjk" target="blank">Adobe library</a></li>
             <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_1.1.0.aco" download>Photoshop swatches</a></li>
             <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_1.1.0.ase" download>Illustrator swatches</a></li>
+            <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_1.1.0.sketchpalette" download>Sketch palette</a></li>
           </ul>
           <ul class="nav-menus menus-github">
             <li>
