--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -40,7 +40,7 @@
           <a class="blog-logo" href="{{ site.baseurl }}"></a>
           <div class="infomation">
             <div class="version">
-              Version 1.2.1
+              Version {{ site.oc-version }}
             </div>
             <div class="license">
               MIT license
@@ -71,11 +71,11 @@
           </ul>
           <ul class="nav-menus menus-download">
             <li class="list-title">Download</li>
-            <li><a class="nav-menu" href="https://unpkg.com/open-color@1.2.1/open-color.scss" download>Source code</a></li>
+            <li><a class="nav-menu" href="https://unpkg.com/open-color@{{ site.oc-version }}/open-color.scss" download>Source code</a></li>
             <li><a class="nav-menu" href="http://adobe.ly/2cYxrjk" target="blank">Adobe library</a></li>
-            <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_1.2.1.aco" download>Photoshop swatches</a></li>
-            <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_1.2.1.ase" download>Illustrator swatches</a></li>
-            <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_1.2.1.sketchpalette" download>Sketch palette</a></li>
+            <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_{{ site.oc-version }}.aco" download>Photoshop swatches</a></li>
+            <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_{{ site.oc-version }}.ase" download>Illustrator swatches</a></li>
+            <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_{{ site.oc-version }}.sketchpalette" download>Sketch palette</a></li>
           </ul>
           <ul class="nav-menus menus-github">
             <li>
