Added meta - twitter card

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -11,6 +11,9 @@
     <meta name="application-name" content="Open color"/>
     <meta name="msapplication-TileColor" content="#FFFFFF" />
     <meta name="msapplication-TileImage" content="{{ site.baseurl }}/asset/favicon/mstile-144x144.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@_heeyeun">
+    <meta name="twitter:creator" content="@_heeyeun" />
     <meta property="og:title" content="Open color" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://yeun.github.io/open-color/" />
