--- a/docs/_includes/introduction.html
+++ b/docs/_includes/introduction.html
@@ -7,8 +7,12 @@
         <span class="introduction-color introduction-{{ color }}"></span>
       {% endfor %}.
       </span>
-      All the colors are perceptible by color blind (specifically deuteranopia and protanopia) people.
+      All the colors considered the color blind, specifically deuteranopia and protanopia.
     </p>
-    <div class="note">* The colors are subject to change in the future. Thus, using an Open color as a main identity color is not recommended.</div>
+    <div class="note">
+      * Open color is not specially designed for the color blind.
+      <br>
+      * The colors are subject to change in the future. Thus, using an Open color as a main identity color is not recommended.
+    </div>
   </div>
 </div>
