--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -40,7 +40,7 @@
     <div class="container">
       <div class="navigation">
         <div class="title">
-          <a class="blog-logo" href="{{ site.baseurl }}"></a>
+          <a class="blog-logo" href="{{ site.baseurl }}/"></a>
           <div class="infomation">
             <div class="version">
               Version {{ site.oc-version }}
