Changed download link

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -74,7 +74,7 @@
           </ul>
           <ul class="nav-menus menus-download">
             <li class="list-title">Download</li>
-            <li><a class="nav-menu" href="https://unpkg.com/open-color@{{ site.oc-version }}/open-color.scss" download>Source code</a></li>
+            <li><a class="nav-menu" href="https://github.com/yeun/open-color/releases/download/v{{ site.oc-version }}/open-color.zip" download>Source code</a></li>
             <li><a class="nav-menu" href="http://adobe.ly/2cYxrjk" target="blank">Adobe library</a></li>
             <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_{{ site.oc-version }}.aco" download>Photoshop swatches</a></li>
             <li><a class="nav-menu" href="{{ site.baseurl }}/asset/download/open-color_{{ site.oc-version }}.ase" download>Illustrator swatches</a></li>
