--- a/docs/_includes/introduction.html
+++ b/docs/_includes/introduction.html
@@ -7,10 +7,10 @@
         <span class="introduction-color introduction-{{ color }}"></span>
       {% endfor %}.
       </span>
-      All the colors considered the color blind, specifically deuteranopia and protanopia.
+      Open color is provided as CSS, SCSS, LESS, Adobe library, Photoshop/Illustrator swatches and Sketch palette.
     </p>
     <div class="note">
-      * Open color is not specially designed for the color blind.
+      * All the color is tested on deuteranopia and protanopia mode. The process will soon be published in the article.
       <br>
       * The colors are subject to change in the future. Thus, using an Open color as a main identity color is not recommended.
     </div>
