--- a/docs/stylesheets/style.scss
+++ b/docs/stylesheets/style.scss
@@ -13,7 +13,7 @@
 @import 'ingredients';
 @import 'index';
 @import 'docs';
-@import 'moblie';
+@import 'mobile';
 
 html {
   box-sizing: border-box;
