Add inkscape swatches download link

--- a/docs/_includes/introduction.html
+++ b/docs/_includes/introduction.html
@@ -7,7 +7,7 @@
         <span class="introduction-color introduction-{{ color }}"></span>
       {% endfor %}.
       </span>
-      Open color is provided as CSS, SCSS, LESS, Stylus, Adobe library, Photoshop/Illustrator swatches and Sketch palette.
+      Open color is provided as CSS, SCSS, LESS, Stylus, Adobe library, Photoshop/Illustrator swatches, Sketch paletten and Inkscape swatches.
     </p>
     <div class="note">
       * All the color is tested on deuteranopia and protanopia mode. The process will soon be published in the article.
