--- a/docs/_includes/introduction.html
+++ b/docs/_includes/introduction.html
@@ -10,7 +10,7 @@
       Open color is provided as CSS, SCSS, LESS, Stylus, Adobe library, Photoshop/Illustrator swatches, Sketch paletten and Inkscape swatches.
     </p>
     <div class="note">
-      * All the color is tested on deuteranopia and protanopia mode. The process will soon be published in the article.
+      * All of the colors are tested on deuteranopia and protanopia mode. The process will soon be published in an article.
       <br>
       * The colors are subject to change in the future. Thus, using an Open color as a main identity color is not recommended.
     </div>
