Changed intro text

--- a/docs/_includes/introduction.html
+++ b/docs/_includes/introduction.html
@@ -1,13 +1,12 @@
 <div class="introduction">
   <div class="column">
     <p>
-      Open color is a color scheme for UI design. You can use it for font, background, border etc. It contains a gray and twelve colors -
-      <span class="introduction-colors">
+      Open color is an open-source <span class="no-wrap">color scheme</span> optimized for UI. <span class="no-wrap">You can use</span> it <span class="no-wrap">for font,</span> background, border etc. <span class="no-wrap">It contains</span> a gray and twelve colors.
+      <div class="introduction-colors">
       {% for color in site.colors %}
         <span class="introduction-color introduction-{{ color }}"></span>
-      {% endfor %}.
-      </span>
-      Open color is provided as CSS, SCSS, LESS, Stylus, Adobe library, Photoshop/Illustrator swatches, Sketch palette and Inkscape swatches.
+      {% endfor %}
+      </div>
     </p>
     <div class="note">
       * All of the colors are tested on deuteranopia and protanopia mode. The process will soon be published in an article.
