--- a/docs/_sass/_docs.scss
+++ b/docs/_sass/_docs.scss
@@ -5,15 +5,16 @@
 .docs-title {
   margin-top: 0;
   margin-bottom: 30px;
-  font-size: 16px;
+  font-size: 24px;
   letter-spacing: $letter-spacing-sm;
   text-transform: uppercase;
-  font-weight: $font-weight-m;
+  font-weight: $font-weight-b;
   line-height: 1.5;
 }
 
 .docs-content {
-  font-size: 16px;
+  font-size: 20px;
+  line-height: 1.6;
 
   p {
     margin-top: 0;
