--- a/docs/_sass/_navbar.scss
+++ b/docs/_sass/_navbar.scss
@@ -9,7 +9,6 @@
 
 a.blog-logo {
   display: inline-block;
-  margin-bottom: 30px;
   width: 100%;
   height: 40px;
   background: url('../asset/images/logo.svg') no-repeat;
@@ -18,13 +17,40 @@ a.blog-logo {
   vertical-align: top;
 }
 
-.infomation {
-  line-height: 1.7;
-  padding: 0 0 12px;
+.metadata {
+  padding: 0;
+  color: $oc-gray-7;
   font-size: 11px;
   font-weight: 500;
+  line-height: 20px;
   letter-spacing: $letter-spacing-sm;
-  color: $oc-gray-7;
+}
+
+.link-github {
+  display: inline-block;
+  font-family: $font-family-headline;
+  font-size: 12px;
+  color: $nav-color;
+  transition: all 0.2s ease-out;
+  line-height: 20px;
+  margin-bottom: 20px;
+
+  @media (min-width: 880px) {
+    line-height: 40px;
+    margin-bottom: 0;
+  }
+
+  &:hover {
+    color: $nav-color-highlight;
+  }
+  &:active,
+  &.active,
+  &:focus {
+    color: $nav-color-highlight;
+    font-weight: $font-weight-b;
+    text-decoration: none;
+    outline: none;
+  }
 }
 
 .introduction {
@@ -32,7 +58,7 @@ a.blog-logo {
 }
 
 .nav-menus-wrap {
-  margin-top: 69px
+  margin-top: 30px
 }
 
 .nav-menus {
@@ -46,7 +72,7 @@ a.blog-logo {
     
     &.list-title {
       padding: 6px 0 12px;
-      font-size: 11px;
+      font-size: 13px;
       font-weight: $font-weight-b;
       letter-spacing: $letter-spacing-sm;
       color: $oc-gray-7;
