Added adhoc style

--- a/docs/stylesheets/style.scss
+++ b/docs/stylesheets/style.scss
@@ -70,3 +70,9 @@ ul > li + li {
   display: inline-block;
   white-space: nowrap;
 }
+
+.in-writing {
+  margin-top: 40px;
+  font-size: 22px;
+  color: $oc-gray-6;
+}
