fixed mobile style

--- a/docs/_sass/_posts.scss
+++ b/docs/_sass/_posts.scss
@@ -1,12 +1,10 @@
-
-.instructions-wrap {
-  width: 80%;
-}
-
+.docs-section,
 .introduction-section {
   padding: 40px 0;
+  @include clearfix;
 }
 
+.docs-title,
 .introduction-title {
   margin-top: 0;
   margin-bottom: 30px;
@@ -15,11 +13,20 @@
   text-transform: uppercase;
   font-weight: $font-weight-b;
   line-height: 1.5;
+
+  @media (max-width: 543px) {
+    font-size: 20px;
+  }
 }
 
+.docs-content,
 .introduction-content {
   font-size: 20px;
   line-height: 1.6;
+
+  @media (max-width: 543px) {
+    font-size: 16px;
+  }
 
   h5 {
     font-size: 16px;
@@ -67,7 +74,6 @@
       }
     }
 
-
     .box {
       padding: 2em 0;
       text-align: center;
@@ -106,3 +112,34 @@
   }
 }
 
+.highlight {
+  margin-left: 0;
+  margin-right: 0;
+  padding: 20px 30px;
+  background-color: $oc-gray-0;
+  border-radius: 4px;
+}
+
+pre {
+  display: block;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0;
+  line-height: $line-height-base;
+  white-space: pre;       /* css-3 */
+  white-space: -moz-pre;  /* Mozilla, since 1999 */
+  white-space: -pre;      /* Opera 4-6 */
+  white-space: -o-pre;    /* Opera 7 */
+  word-wrap: break-word;  /* Internet Explorer 5.5+ */
+  word-break: break-all;
+
+  code {
+    margin: 0;
+    padding: 0;
+    font-size: inherit;
+    white-space: pre-wrap;
+    word-break: break-all;
+    background-color: transparent;
+    border-radius: 0;
+  }
+}
