--- a/docs/stylesheets/style.scss
+++ b/docs/stylesheets/style.scss
@@ -11,9 +11,8 @@
 @import 'shortcuts';
 @import 'swatches';
 @import 'ingredients';
-@import 'instructions';
+@import 'posts';
 @import 'index';
-@import 'docs';
 @import 'mobile';
 
 html {
